syntax = "proto3";

import "format.proto";
message NumberTypeOption {
    NumberFormat format = 1;
    uint32 scale = 2;
    string symbol = 3;
    bool sign_positive = 4;
    string name = 5;
}
